# asm-linux-multiarch

./: .gitignore  .gitmodules  Makefile  README.md  meson.build
.blueprints/: create_cuda_project.sh
cuda/: meson.build
cuda/labs/: meson.build
cuda/labs/basics/: meson.build
cuda/labs/basics/gpu_clock/: kernel.ptx  main.s  meson.build
cuda/labs/basics/gpu_hello/: kernel.ptx  main.s  meson.build
cuda/labs/basics/gpu_pointertest/: kernel.ptx  main.s  meson.build
cuda/labs/basics/gpu_thread_write/: kernel.ptx  main.s  meson.build
cuda/labs/basics/gpu_write/: kernel.ptx  main.s  meson.build
cuda/labs/machine_learning/: meson.build
cuda/labs/machine_learning/gradient_descent/: meson.build
cuda/labs/machine_learning/gradient_descent/gpu_quadratic_from_roots/: kernel.ptx  main.s  meson.build
cuda/labs/math/: meson.build
cuda/labs/math/gpu_vector_add/: kernel.ptx  main.s  meson.build
projects/: Makefile
x86_64/: meson.build
x86_64/lib/: meson.build
x86_64/lib/conversion/: meson.build
x86_64/lib/hackers_delight/: meson.build
x86_64/lib/io/: meson.build
x86_64/lib/math/: meson.build
x86_64/lib/strings/: meson.build
x86_64/tui/: meson.build
x86_64/tui/labs/: meson.build
x86_64/tui/labs/basics/: meson.build
x86_64/tui/labs/basics/arguments/: meson.build
x86_64/tui/labs/basics/cpuid/: meson.build
x86_64/tui/labs/basics/cwd/: meson.build
x86_64/tui/labs/basics/dealcards/: meson.build
x86_64/tui/labs/basics/dirinfo/: meson.build
x86_64/tui/labs/basics/hello/: meson.build
x86_64/tui/labs/basics/inputdemo/: meson.build
x86_64/tui/labs/basics/keyfilter/: meson.build
x86_64/tui/labs/basics/palindrome/: meson.build
x86_64/tui/labs/basics/printenv/: meson.build
x86_64/tui/labs/basics/readfile/: meson.build
x86_64/tui/labs/basics/rotatebits/: meson.build
x86_64/tui/labs/basics/uuid/: meson.build
x86_64/tui/labs/basics/waitforenterkeypress/: meson.build
x86_64/tui/labs/basics/waitforkeypress/: meson.build
x86_64/tui/labs/basics/winsize/: meson.build
x86_64/tui/labs/math/: meson.build
x86_64/tui/labs/math/addarrays/: meson.build
x86_64/tui/labs/math/addarrays/avx/: meson.build
x86_64/tui/labs/math/addarrays/avx2/: meson.build
x86_64/tui/labs/math/addarrays/avx512/: meson.build
x86_64/tui/labs/math/addarrays/fpu/: meson.build
x86_64/tui/labs/math/addarrays/gpr/: meson.build
x86_64/tui/labs/math/addarrays/multithread/: meson.build
x86_64/tui/labs/math/addarrays/scalar/: meson.build
x86_64/tui/labs/math/addarrays/sse/: meson.build
