# x86_64/tui/labs/basics/meson.build

install_path = 'x86_64/tui/labs/basics'

subdir('arguments')
subdir('cpuid')
subdir('cwd')
subdir('dealcards')
subdir('dirinfo')
subdir('hello')
subdir('inputdemo')
subdir('keyfilter')
subdir('palindrome')
subdir('printenv')
subdir('readfile')
subdir('rotatebits')
subdir('uuid')
subdir('waitforenterkeypress')
subdir('waitforkeypress')
subdir('winsize')

